// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ControlIcon Control Icon 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c2 {
  color: currentColor;
  min-width: 32px;
}

.c1 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  border-radius: 50%;
  color: #434d59;
}

.c1:focus {
  outline: none;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c1:hover:enabled {
  cursor: pointer;
  color: #122b47;
  background-color: #e4e7eb;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-label="close"
      className="c1"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="32px"
        icon="close"
        size="32px"
        title={null}
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots ControlIcon Disabled 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c2 {
  color: currentColor;
  min-width: 32px;
}

.c1 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  border-radius: 50%;
  color: #c0c8d1;
}

.c1:focus {
  outline: none;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c1:hover:enabled {
  cursor: pointer;
  color: #122b47;
  background-color: #e4e7eb;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-label="close"
      className="c1"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="32px"
        icon="close"
        size="32px"
        title={null}
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots ControlIcon Toggled 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c2 {
  color: currentColor;
  min-width: 32px;
}

.c1 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  border-radius: 50%;
  color: #00438f;
}

.c1:focus {
  outline: none;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c1:hover:enabled {
  cursor: pointer;
  color: #122b47;
  background-color: #e4e7eb;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-label="close"
      className="c1"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="32px"
        icon="close"
        size="32px"
        title={null}
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;
